--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:HAJi8EYKBxlyWy2PM99DMHQLO2AOfLrIPLbebPCwbIY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -62,3 +62,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+GOOGLE_CLIENT_ID="118382560697-p49uebrl4vkmli9v932tcp38i78f1lnm.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
+GOOGLE_CLIENT_REDIRECT="${APP_URL}/auth/google/call-back"
